Fixed JourneyForm overlap with Navbar

--- a/client/src/css/JourneyForm.css
+++ b/client/src/css/JourneyForm.css
@@ -1,6 +1,6 @@
 .journeyForm {
-    margin-top: 250px;
-}
+    margin-top: 300px;
+  }
 
 .button Button {
     color: #578F6A ;
