--- a/client/src/css/NavBar.css
+++ b/client/src/css/NavBar.css
@@ -7,5 +7,6 @@
 .navbar {
     /* display: inline; */
     position: sticky;
+    z-index: 1000;
     /* margin-bottom: 120px; */
 }
